clusters/k8s-keiretsu/apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 0
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
      - name: homeassistant
        image: homeassistant/home-assistant:stable
        ports:
          - containerPort: 8123
        volumeMounts:
          - mountPath: /config
            name: homeassistant-config
      restartPolicy: Always
      volumes:
        - name: homeassistant-config
          persistentVolumeClaim:
            claimName: homeassistant-config
